@@ -38,6 +38,7 @@ import org.omegat.filters2.FilterContext;
 import org.omegat.filters2.Instance;
 import org.omegat.util.LinebreakPreservingReader;
 import org.omegat.util.NullBufferedWriter;
+import org.omegat.util.OConsts;
 import org.omegat.util.OStrings;
 import org.omegat.util.StringUtil;
 
@@ -65,7 +66,9 @@ public class INIFilter extends AbstractFilter {
     }
 
     public Instance[] getDefaultInstances() {
-        return new Instance[] { new Instance("*.ini"), new Instance("*.lng"), };
+        return new Instance[] { new Instance("*.ini"), 
+                                new Instance("*.lng"), 
+                                new Instance("*.strings", OConsts.UTF8, OConsts.UTF8) };
     }
 
     /**
